argocd/plex/templates/gluetun.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  labels:
    app: gluetun
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
      - name: gluetun
        # https://github.com/qdm12/gluetun/pkgs/container/gluetun/versions?filters%5Bversion_type%5D=tagged
        image: ghcr.io/qdm12/gluetun:v3.41.1
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        # You can optionally specify ports that are used by your containers, but it is not strictly necessary
        # ports:
        # - containerPort: 8080

        # Adapt the following environment variables to suit your needs and VPN provider
        volumeMounts:
        - name: gluetun-config
          mountPath: /gluetun
        - name: port-forwarding
          mountPath: /tmp/gluetun

        # -- Connecting Other Containers --
      # Define other containers that you want to connected to a VPN.
      # When using Gluetun in a sidecar configuration, all other containers will use Gluetun's VPN connection.
      # For testing purposes, you can `kubectl exec` into this curl container and run `curl https://ipinfo.io` to test your connection!

      # - name: curl-container
      #   image: quay.io/curl/curl:latest
      #   command: ["sleep", "infinity"]

      - name: movies
        # https://github.com/linuxserver/docker-transmission/pkgs/container/transmission/versions?filters[version_type]=tagged
        image: &img-transmission ghcr.io/linuxserver/transmission:4.1.1
        volumeMounts:
        - name: movies-config
          mountPath: /config
        - name: biggusdiskus
          mountPath: /data/biggusdiskus
          mountPropagation: HostToContainer

        ports:
        - protocol: TCP
          name: http-movies
          containerPort: 9091

      - name: movies-port-forward
        image: *img-transmission
        command: ["/bin/sh"]
        args:
          - "-c"
          - |
            echo -n "Waiting"

            while [ ! -s /tmp/gluetun/forwarded_port ]; do
              echo -n "."
              sleep 10s
            done
            echo ""

            echo "Port forwarding data received"
            cat /tmp/gluetun/forwarded_port

            echo "Configuring port"
            transmission-remote localhost -p "$(cat /tmp/gluetun/forwarded_port)"
            echo "Updating transmission"
            # transmission-remote localhost -t all --reannounce
            echo "Done"
            sleep infinity
        volumeMounts:
        - name: port-forwarding
          mountPath: /tmp/gluetun

      volumes:
      - name: port-forwarding
        emptyDir:
          medium: Memory
      - name: gluetun-config
        hostPath:
          path: /hot-1/vault/gluetun
          type: Directory
      - name: movies-config
        hostPath:
          path: /hot-1/vault/transmission/movies/config
          type: Directory
      # - name: series-config
      #   hostPath:
      #     path: /hot-1/vault/transmission/series/config
      #     type: Directory
      - name: biggusdiskus
        hostPath:
          path: /warm-1/vault
          type: Directory
