argocd/plex/templates/ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: plex
spec:
  serviceName: plex
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-media-server
      app.kubernetes.io/instance: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex-media-server
        app.kubernetes.io/instance: plex
    spec:
      hostNetwork: true
      volumes:
      - name: pms-transcode
        emptyDir: {}
      - name: woofdisks
        hostPath:
          path: /warm-1/woofdisks
          type: Directory
      - name: biggusdiskus
        hostPath:
          path: /warm-1/vault
          type: Directory
      - name: pms-config
        hostPath:
          path: /hot-1/apps/plex/config
          type: Directory
      terminationGracePeriodSeconds: 120
      containers:
      - name: server
        image: index.docker.io/plexinc/pms-docker:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 32400
          name: pms
        volumeMounts:
        - name: pms-config
          mountPath: /config
        - name: pms-transcode
          mountPath: /transcode
        - name: woofdisks
          mountPath: /data/woofdisks
          mountPropagation: HostToContainer
        - name: biggusdiskus
          mountPath: /data/biggusdiskus
          mountPropagation: HostToContainer
  # volumeClaimTemplates:
  # - metadata:
  #     name: pms-config
  #   spec:
  #     accessModes: [ "ReadWriteOnce" ]
  #     storageClassName: plex-config
  #     resources:
  #       requests:
  #         storage: 2Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      volumes:
      - name: config
        hostPath:
          path: /hot-1/apps/prowlarr/config
          type: Directory
      terminationGracePeriodSeconds: 120
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:1.37.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9696
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      volumes:
      - name: woofdisks
        hostPath:
          path: /warm-1/woofdisks
          type: Directory
      - name: biggusdiskus
        hostPath:
          path: /warm-1/vault
          type: Directory
      - name: config
        hostPath:
          path: /hot-1/apps/radarr/config
          type: Directory
      terminationGracePeriodSeconds: 120
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:5.16.3
        imagePullPolicy: Always
        # ports:
        # - containerPort: 7878
        #   name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - mountPath: /data/woofdisks
          name: woofdisks
          mountPropagation: HostToContainer
        - name: biggusdiskus
          mountPath: /data/biggusdiskus
          mountPropagation: HostToContainer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      volumes:
      - name: woofdisks
        hostPath:
          path: /warm-1/woofdisks
          type: Directory
      - name: biggusdiskus
        hostPath:
          path: /warm-1/vault
          type: Directory
      - name: config
        hostPath:
          path: /hot-1/apps/sonarr/config
          type: Directory
      terminationGracePeriodSeconds: 120
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.15
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - mountPath: /data/woofdisks
          name: woofdisks
          mountPropagation: HostToContainer
        - name: biggusdiskus
          mountPath: /data/biggusdiskus
          mountPropagation: HostToContainer
