argocd/plex/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-media-server
spec:
  type: ClusterIP
  ports:
  - name: pms
    port: 32400
    targetPort: 32400
    protocol: TCP
  selector:
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: prowlarr
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
  - name: http
    port: 80
    targetPort: 7878
    protocol: TCP
  selector:
    app.kubernetes.io/name: radarr
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: sonarr
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 9091
  selector:
    app: gluetun
