argocd/plex/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`orion.nest.jurabytes.net`)
    kind: Rule
    services:
    - name: plex-media-server
      port: pms
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prowlarr.nest.jurabytes.net`)
    kind: Rule
    services:
    - name: prowlarr
      port: http
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`radarr.nest.jurabytes.net`)
    kind: Rule
    services:
    - name: radarr
      port: 80
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonarr.nest.jurabytes.net`)
    kind: Rule
    services:
    - name: sonarr
      port: http
  tls:
    certResolver: letsencrypt
